[package]
name = "epubshrink"
version = "0.1.0"
edition = "2021"
authors = ["frfole"]
description = "An utility to minimize EPUB files"
documentation = "https://github.com/frfole/epubshrink"
readme = "README.md"
homepage = "https://github.com/frfole/epubshrink"
repository = "https://github.com/frfole/epubshrink"
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
libcaesium = { git = "https://github.com/Lymphatus/libcaesium.git" }
zip = { version = "0.6.6" }
subsetter = { version = "0.1" }
clap = { version = "4.4.18", features = ["derive"] }
log = "0.4.20"
env_logger = "0.11.1"
